--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "multer": "^1.3.0",
-    "xml2js": "git@github.com:Leonidas-from-XIV/node-xml2js.git"
+    "xml2js": "https://github.com/Leonidas-from-XIV/node-xml2js.git"
   }
 }
